update »run-java.sh« to 1.3.6